Add compiler options for supporting auto-named modules